tests/build/fail/property/input_no_debug.stderr
error[E0277]: the trait bound `NoDebug: Clone` is not satisfied
  --> $DIR/input_no_debug.rs:14:37
   |
14 | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
   |                                     ^^^^^^^ the trait `Clone` is not implemented for `NoDebug`
   |
   = note: required by `allowed_in_when_property_requires_IntoVar_members`

error[E0277]: `NoDebug` doesn't implement `Debug`
  --> $DIR/input_no_debug.rs:14:37
   |
14 | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
   |                                     ^^^^^^^ `NoDebug` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `NoDebug`
   = note: add `#[derive(Debug)]` or manually implement `Debug`
   = note: required because of the requirements on the impl of `VarValue` for `NoDebug`
   = note: required because of the requirements on the impl of `IntoVar<NoDebug>` for `NoDebug`
   = note: required by `allowed_in_when_property_requires_IntoVar_members`

error[E0308]: mismatched types
  --> $DIR/input_no_debug.rs:14:37
   |
14 | pub fn bar(child: impl UiNode, bar: NoDebug) -> impl UiNode {
   |                                     ^^^^^^^ expected struct `NoDebug`, found struct `OwnedVar`
   |
   = note: expected struct `NoDebug`
              found struct `OwnedVar<NoDebug>`
